Resolve Bug with Navigation Dropdown Sections (#108)
This commit resolves a bug for users on mobile/small devices. Previously, the navigation buttons for dropdown sections could be pushed too far to the left and off of the user's screen. Additionally, these buttons sometimes appeared behind other elements.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -81,7 +81,7 @@
 
   @include small {
     width: 200%;
-    transform: translate(-40%, -3%);
+    z-index: 1;
   }
 }
 
